Creating goalEndpoints
